# HathiZip

./: .gitignore  .travis.yml  CHANGELOG.rst  Jenkinsfile  MANIFEST.in  Pipfile  README.rst  cx_setup.py  deployment.yml  make.bat  pyproject.toml  requirements-dev.txt  setup.cfg  setup.py  sonar-project.properties  tox.ini
ci/docker/deploy/devpi/test/windows/: Dockerfile
ci/docker/python-testing/: Dockerfile
ci/docker/python/linux/testing/: Dockerfile
ci/docker/python/linux/tox/: Dockerfile
ci/docker/python/windows/tox/: Dockerfile
ci/docker/shared/: requirements-ci.txt
ci/jenkins/scripts/: packaging.groovy  sonarqube.groovy  tox.groovy
docs/source/: conf.py  index.rst
hathizip/: __init__.py  __main__.py  __version__.py  cli.py  configure_logging.py  process.py  utils.py
tests/: test_cli.py  test_process.py
