[metadata]
name = HathiZip
version = 0.1.0
url = https://www.library.illinois.edu/dccdocs/hathi_zip/
download_url = https://github.com/UIUCLibrary/HathiZip
author = University Library at The University of Illinois at Urbana Champaign: Preservation Services
author_email = prescons@library.illinois.edu
description = Creates .zip file packages for HathiTrust. Replacement script for HathiTrust Zip and Submit.
long_description = file: README.rst
license = University of Illinois/NCSA Open Source License
maintainer = Henry Borchers
maintainer_email = hborcher@illinois.edu


[aliases]
test=pytest

[build_sphinx]
source-dir = docs/source
build-dir  = docs/build
all_files  = 1
