[metadata]
name = HathiZip
version = 0.1.4
url = https://www.library.illinois.edu/dccdocs/hathi_zip/
download_url = https://github.com/UIUCLibrary/HathiZip
author = University Library at The University of Illinois at Urbana Champaign: Preservation Services
author_email = prescons@library.illinois.edu
description = Creates .zip file packages for HathiTrust. Replacement script for HathiTrust Zip and Submit.
long_description = file: README.rst
license = University of Illinois/NCSA Open Source License
maintainer = Henry Borchers
maintainer_email = hborcher@illinois.edu
classifiers =
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    License :: OSI Approved :: University of Illinois/NCSA Open Source License
    Topic :: System :: Archiving :: Packaging
    Topic :: System :: Archiving :: Compression

[options]
zip_safe = False
python_requires = >=3.5

[tool:pytest]
testpaths = tests
addopts = --verbose

[mypy]
ignore_missing_imports = True

[aliases]
test = pytest

[build_sphinx]
source-dir = docs/source
build-dir = docs/build
all_files = 1

[sdist]
formats = zip,gztar